# cmpt373

./: README.md
se-background-template/: CMakeLists.txt
se-background-template/lib/: CMakeLists.txt
se-background-template/lib/solutions/: CMakeLists.txt  task01.cpp  task02.cpp  task03.cpp  task04.cpp  task05.cpp  task06.cpp  task07.cpp  task08.cpp
se-background-template/lib/solutions/include/: task01.h  task03.h  task06.h  task07.h  task08.h
se-background-template/lib/support/: CMakeLists.txt  Support.cpp
se-background-template/lib/support/include/: Support.h
se-background-template/test/: CMakeLists.txt  unit01.cpp  unit02.cpp  unit03.cpp  unit04.cpp  unit05.cpp  unit06.cpp  unit07.cpp  unit08.cpp
